<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/welcomeMainLayout"
    tools:context="com.olgazelenko.nycquiz.MainActivity">

    <ImageView
        style="@style/image"
        android:contentDescription="@string/contentDescription" />


    <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
        style="@style/roundCornerMain.welcome"
        app:corner_radius="@dimen/radius_content"/>

    <ImageView
        android:id="@+id/image"
        style="@style/welcomeMainLayout.image" />


    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/welcomeMainLayout.layoutText">

        <LinearLayout
            android:id="@+id/welcomeTxt"
            style="@style/welcomeMainLayout.horizontalText">

            <TextView
                android:id="@+id/textView"
                style="@style/welcomeMainLayout.textView"
                android:text="@string/welcome_to" />

            <TextView
                style="@style/welcomeMainLayout.textView.yellow"
                android:text="RTO Practice Exam" />
        </LinearLayout>

        <TextView
            style="@style/welcomeMainLayout.textView.alpha"
            android:text="@string/lets_see" />

        <EditText
            android:id="@+id/name"
            style="@style/editText" />
    </LinearLayout>



    <Button
        android:id="@+id/start"
        style="@style/welcomeMainLayout.start"
        android:background="@drawable/circle_white"
        android:onClick="start"
        android:text="@string/button_start" />
</RelativeLayout>


